--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "firebase": "^9.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
     "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.1.5",
     "react-query": "^3.39.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
