--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.4.20",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.0"
   },
