--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sweetalert2": "^11.4.20",
+    "swiper": "^8.3.0",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.0"
   },
