--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["dont", "mypage", "Swal", "sweetalert", "webp"]
+  "cSpell.words": ["dont", "mypage", "mypost", "Swal", "sweetalert", "webp"]
 }
