--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-env": "^7.18.9",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@loadable/component": "^5.15.2",
@@ -12,7 +13,6 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
     "react": "^18.2.0",
-    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
@@ -23,7 +23,6 @@
     "react-scripts": "5.0.1",
     "react-spring": "^9.4.5",
     "redux": "^4.2.0",
-    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sweetalert2": "^11.4.20",
     "web-vitals": "^2.1.0"
