--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "sweetalert2": "^11.4.20",
+    "swiper": "^8.3.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
