--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-intersection-observer": "^9.3.5",
+    "react-joyride": "^2.5.0",
     "react-loader-spinner": "^5.1.5",
     "react-query": "^3.39.1",
     "react-redux": "^8.0.2",
