--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-spring": "^9.4.5",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "sweetalert2": "^11.4.20",
     "swiper": "^8.3.1",
     "web-vitals": "^2.1.0"
