--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["dont", "mypage", "mypost", "Swal", "sweetalert", "webp"]
+  "cSpell.words": [
+    "dont",
+    "mypage",
+    "mypost",
+    "sockjs",
+    "stompjs",
+    "Swal",
+    "sweetalert",
+    "webp"
+  ]
 }
