refactoring: code Refactoring - II

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,3 @@
 {
-  "cSpell.words": [
-    "dont",
-    "mypage",
-    "mypost",
-    "sockjs",
-    "stompjs",
-    "Swal",
-    "sweetalert",
-    "webp"
-  ]
+  "cSpell.words": ["dont", "mypage", "mypost", "sockjs", "stompjs", "webp"]
 }
