--- a/public/manifest.json
+++ b/public/manifest.json
@@ -56,8 +56,7 @@
       "purpose": "any maskable"
     }
   ],
-  "prefer_related_applications": "true",
-  "start_url": "/",
+  "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
